--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
+    "array-length": "^0.1.2",
     "axios": "^0.19.2",
     "pg": "^8.2.1",
     "react": "^18.2.0",
